[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/run.gd" id="1"]

[node name="Run" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Outer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="MapPanel" type="PanelContainer" parent="Outer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapView" type="RichTextLabel" parent="Outer/MapPanel"]
layout_mode = 2
fit_content = true
scroll_active = false
text = ""

[node name="LogLabel" type="Label" parent="Outer"]
layout_mode = 2
text = "Move with WASD / Arrows"

[node name="Leave" type="Button" parent="Outer"]
layout_mode = 2
text = "Leave Run"

[node name="RewardPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -100.0
offset_right = 320.0
offset_bottom = 100.0

[node name="RewardButtons" type="HBoxContainer" parent="RewardPanel"]
layout_mode = 2

[connection signal="pressed" from="Outer/Leave" to="." method="_on_leave_pressed"]
